@@ -50,4 +50,4 @@ class RevisionDiffingResource(api_base.BaseResource):
                 LOG.exception(message)
 
         resp.status = falcon.HTTP_200
-        resp.body = resp_body
+        resp.text = resp_body
