@@ -55,4 +55,4 @@ class RollbackResource(api_base.BaseResource):
 
         revision_resp = self.view_builder.show(rollback_revision)
         resp.status = falcon.HTTP_201
-        resp.body = revision_resp
+        resp.text = revision_resp
